[gd_scene load_steps=7 format=2]

[ext_resource path="res://ShowData.gd" type="Script" id=1]
[ext_resource path="res://Assets/AbilityIcons/enchant-eerie-1.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/fontILabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Introdile.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Prefabs/fontIRichText.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="ShowData" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="abilityPanel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 30.0
margin_right = 669.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="abilityHBox" type="HBoxContainer" parent="abilityPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 579.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="abilityIcon" type="TextureRect" parent="abilityPanel/abilityHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
texture = ExtResource( 2 )
stretch_mode = 6
_sections_unfolded = [ "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="abilityVBox" type="VBoxContainer" parent="abilityPanel/abilityHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 579.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="abilityName" parent="abilityPanel/abilityHBox/abilityVBox" index="0" instance=ExtResource( 3 )]

margin_right = 443.0
margin_bottom = 26.0
size_flags_stretch_ratio = 0.1
custom_fonts/font = SubResource( 1 )
text = "AbilityName"
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="abilityDesc" parent="abilityPanel/abilityHBox/abilityVBox" index="1" instance=ExtResource( 5 )]

margin_top = 30.0
margin_right = 443.0
margin_bottom = 171.0
size_flags_vertical = 3
bbcode_text = "This is the ability's [color=yellow]description[/color]. This will contain the written [color=yellow]description[/color], the [color=red]power[/color], [color=blue]effects[/color] tied to it, and [color=green]duration[/color] if applicable."
text = "This is the ability's description. This will contain the written description, the power, effects tied to it, and duration if applicable."
_sections_unfolded = [ "BBCode", "Size Flags", "custom_fonts" ]

[node name="abilityCooldown" parent="abilityPanel/abilityHBox/abilityVBox" index="2" instance=ExtResource( 3 )]

margin_top = 175.0
margin_right = 443.0
margin_bottom = 188.0
text = "Cooldown: X turns"

[node name="abilityIDSelector" type="SpinBox" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 515.0
margin_top = 71.0
margin_right = 589.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[connection signal="changed" from="abilityIDSelector" to="." method="_on_abilityIDSelector_changed"]

[connection signal="value_changed" from="abilityIDSelector" to="." method="_on_abilityIDSelector_value_changed"]


